--- a/Wilson_oficial/Wilson_oficial/Pages/CategoriesPage.xaml
+++ b/Wilson_oficial/Wilson_oficial/Pages/CategoriesPage.xaml
@@ -3,4 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Wilson_oficial.Pages.CategoriesPage">
 	<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+
+  <StackLayout Padding ="5,5,5,5">
+    <SearchBar x:Name="search_field" Placeholder="Search here..."></SearchBar>
+
+    <ListView x:Name="list_words"
+              IsGroupingEnabled="True"
+              GroupDisplayBinding="{Binding Key}"
+              GroupShortNameBinding="{Binding Key}">
+
+      <ListView.ItemTemplate>
+        <DataTemplate>
+          <TextCell Text="{Binding Name}"></TextCell>
+        </DataTemplate>
+      </ListView.ItemTemplate>
+    </ListView>
+  </StackLayout>
 </ContentPage>
